Edited wiki page Metodologia through web user interface.

--- a/wiki/Metodologia.wiki
+++ b/wiki/Metodologia.wiki
@@ -1,13 +1,10 @@
-#summary One-sentence summary of this page.
+#Metodolgía utilizada en el proyecto.
 
-= Introduction =
-
-Add your content here.
+== Metodología de Desarrollo del Sistema Bibliotecario Organizador ==
 
 
-= Details =
+La metodología que se definió para el desarrollo del respectivo software, se espera como objetivos, que el sistema sea capaz de controlar todas las prestaciones que se pueda solicitar por parte de los estudiantes de un centro educativo que cuente con una biblioteca.
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+La idea es llevar control de la cantidad de prestamos, asi como el momento en que se realice una respectiva devolución. Como finalidad el sistema contendrá tareas donde se pueda realizar mantenimiento de catalogo de libros, asi como ingresar la cantidad de estudiantes que van solicitando el servicio de prestaciones del centro educativo.
+
+En aspectos técnicos el sistema está desarrollado para que pueda soportar cualquier tipo de plataforma, asi respetando un principio de interoperabilidad y que los usuarios puedan realizar modificaciones ó mejoras al código fuente.
