Edited wiki page Metodologia through web user interface.

--- a/wiki/Metodologia.wiki
+++ b/wiki/Metodologia.wiki
@@ -1,4 +1,4 @@
-#Metodología utilizada en el proyecto.
+#metodología utilizada en el proyecto.
 
 == Metodología de Desarrollo del Sistema Bibliotecario Organizador ==
 
