--- a/wiki/Modelo.wiki
+++ b/wiki/Modelo.wiki
@@ -8,9 +8,8 @@ Se crea el software Sistema Bibliotecario Organizador (SBO), donde se administra
 Se encargará de realizar mantenimiento para estudiantes ingresados y que usan la biblioteca, materias correspondientes a cada estudiante para realizar un cálculo correspondiente a su promedio ponderado, libros que forman parte vital de la biblioteca como tal, y la realización de los respectivos prestamos que se soliciten.
 
   # Modelo de negocio empresarial:
-
-Asistencia técnica y preguntas solicitadas por medio de un foro.
-Utilización del software en instituciones de educación pública preferiblemente.
+     * Asistencia técnica y preguntas solicitadas por medio de un foro.
+     * Utilización del software en instituciones de educación pública   preferiblemente.
 
   # Demanda: 
 Universidades públicas, bibliotecas municipales, colegios y escuelas.
@@ -22,6 +21,3 @@ sistemas ya implementados para realizar mantenimiento y prestamos en un entorno 
 
 Como principal objetivo de desarrollar este software es permitir por medio de una comunidad la obtención y mejora del presente proyecto, permitiendo que los usuarios que necesiten parte o total del código fuente del sistema lo pueda adquirir para mejorar y ampliar la producción de nuevas aplicaciones con licencia libre. 
 Con el foro que se brinda en varias comunidades, los usuarios podrán acceder a cualquier consulta que se desea y así incentivar el conocimiento de manera global.
-
-
-  # numbered list
