--- a/wiki/Radiografia.wiki
+++ b/wiki/Radiografia.wiki
@@ -10,3 +10,34 @@
  * Estimación de número medio de desarrolladores: 1.84
  * Número aproximado de desarrolladores: 3
  * Herramienta de ayuda al desarrollo: https://sourceforge.net/projects/tiendaonliness
+
+
+
+<html>
+<body>
+
+<table border="1">
+<tr>
+  <th>Lenguaje de programación</th>
+  <th>Líneas de código</th>
+  <th>Porcentaje</th>
+</tr>
+<tr>
+  <td>java</td>
+  <td>2268</td>
+  <td>50.07%</td>
+</tr>
+<tr>
+  <td>jsp</td>
+  <td>1256</td>
+  <td>27.73%</td>
+</tr>
+<tr>
+  <td>xml</td>
+  <td>1006</td>
+  <td>22.21%</td>
+</tr>
+</table>
+
+</body>
+</html>
